--- a/templates/home.mustache
+++ b/templates/home.mustache
@@ -11,7 +11,7 @@
     {{> theme_hsfk/header}}
 
     <header class="hero__container">
-      <div id="hero-video-container" class="hero__video active">
+      <div id="hero-video-container" class="hero__video">
         <div class="iframe-container">
           <iframe src="https://start.video-stream-hosting.de/player.html?serverapp=hsfk2-vod&streamname=trailer.smil&nocookie=1&bgimage={{{ hero_image }}}" width="100%" height="100%" referrerpolicy="strict-origin" allowfullscreen="allowfullscreen"></iframe>
           <button class="hero__video__close" id="hero-video-close">
