--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,8 +3,7 @@
 @import "global";
 @import "header";
 @import "certificates";
-@import "cookie";
-@import "popup";
+@import "cookies";
 @import "footer";
 @import "courses";
 @import "course";
