--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,11 +1,11 @@
 .home__footer {
   @extend %copy;
-  margin: 2em 0 0;
   color: rgba(white, 0.75);
   background-image: linear-gradient(100deg, #0d425b, #174055);
   padding-top: 2em;
   padding-bottom: 2em;
-  @include bp(m) {
+  @include bp(l) {
+    margin: 2em 0 0;
     padding-top: 4em;
     padding-bottom: 4em;
   }
