--- a/templates/home.mustache
+++ b/templates/home.mustache
@@ -133,6 +133,7 @@
     {{> theme_hsfk/footer}}
     {{{ output.standard_after_main_region_html }}}
   </div>
+  {{{ output.standard_end_of_body_html }}}
 </body>
 
 </html>
