--- a/templates/home.mustache
+++ b/templates/home.mustache
@@ -92,7 +92,7 @@
                   <img loading="lazy" src="{{{ image }}}" alt="">
                 </div>
                 <div class="contributors__copy">
-                  ` <h3>{{{ name }}}</h3>
+                  <h3>{{{ name }}}</h3>
                 </div>
               </button>
               <div class="modal fade" id="{{{ id }}}">
