Fix analytics components

--- a/templates/tool_policy/guestconsent.mustache
+++ b/templates/tool_policy/guestconsent.mustache
@@ -12,7 +12,7 @@
 
     <div class="cookies__actions">
       <button id="js-allow-all" class="btn">Allow all cookies</button>
-      <button id="js-allow-necessary" class="btn">Allow necessary cookies only</button>
+      <button id="js-allow-necessary" class="btn">Reject non-essential cookies</button>
     </div>
 
     <div class="cookies__sub">
