--- a/templates/head.mustache
+++ b/templates/head.mustache
@@ -13,8 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-  <!-- TODO: Dev only -->
-  <link rel="stylesheet" type="text/css" href="/theme/hsfk/style/theme.css" />
+  <link rel="stylesheet" type="text/css" href="/theme/hsfk/style/theme.build.css" />
   <script src="/theme/hsfk/js/build/main.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
