Tweak narrow screen typography

--- a/sass/_courses.scss
+++ b/sass/_courses.scss
@@ -54,8 +54,8 @@
     grid-columns: 1 / 13;
   }
   .modal-body {
-    padding: 1rem 1.5rem;
     @extend %copy;
+    padding: 1rem 1.5rem;
     h3 {
       @extend %h3;
     }
@@ -100,7 +100,11 @@
     bottom: 0;
     left: 0;
     pointer-events: none;
-    background-image: linear-gradient(to bottom, rgba(white, 0), rgba(white, 1) 110%);
+    background-image: linear-gradient(
+      to bottom,
+      rgba(white, 0),
+      rgba(white, 1) 110%
+    );
     width: 100%;
     height: 4em;
   }
@@ -128,10 +132,11 @@
   font-weight: 400;
   letter-spacing: -0.01em;
   color: var(--color-blue-dark);
-  margin-bottom: 0.1em;
   font-size: var(--ms-0);
+  margin-bottom: 0.2em;
   @include bp(m) {
     font-size: 2.4em;
+    margin-bottom: 0.1em;
     line-height: 0.9;
     margin-bottom: 0;
   }
@@ -141,11 +146,12 @@
   font-weight: 700;
   line-height: 1.1;
   letter-spacing: 0;
-  margin-top: 0.1em;
-  margin-bottom: 0.2em;
   font-size: 1.2em;
+  margin-top: 0.1em;
+  margin-bottom: 0.1em;
   @include bp(m) {
     display: flex;
+    margin-bottom: 0.2em;
     gap: 0.15em;
   }
 }
@@ -154,7 +160,7 @@
   display: flex;
   align-items: stretch;
   overflow: hidden;
-  border-top: 1px solid var(--color-gray-light);
+  border-top: 1px solid var(--color-blue-light-3);
 }
 
 .courses__start {
