--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -179,6 +179,7 @@
   --ratio: 0.5625;
   padding: 0 var(--padding);
   background-color: var(--color-blue-dark);
+  visibility: hidden;
   @include bp(m) {
     background: transparent;
   }
@@ -186,7 +187,7 @@
     padding: var(--padding);
     pointer-events: all;
     max-height: calc(var(--ratio) * 100vw + var(--padding) * 1);
-    display: block;
+    visibility: visible;
     opacity: 1;
     .iframe-container {
       opacity: 1;
