Fix FontAwesome Icons

--- a/sass/_fa.scss
+++ b/sass/_fa.scss
@@ -3,7 +3,7 @@
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
  */
 
-.fa {
+.fa-solid {
   display: inline-block;
   font: normal normal normal 14px/1 FontAwesome;
   font-size: inherit;
