--- a/templates/course_list.mustache
+++ b/templates/course_list.mustache
@@ -28,7 +28,7 @@
             <div class="modal-header">
               <h2 class="modal-title">{{{ course.fullname  }}}</h2>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <i class="fa fa-times fa-1x" aria-hidden="true"></i>
+                <i class="fa-solid fa-times fa-1x" aria-hidden="true"></i>
               </button>
             </div>
             <div class="modal-body">
@@ -44,7 +44,7 @@
                   <summary>
                     <div class="author__image">
                       <img src="{{{ image }}}" loading="lazy" alt="">
-                      <i class="details-icon fa fa-caret-down fa-2x" aria-hidden="true"></i>
+                      <i class="details-icon fa-solid fa-caret-down fa-2x" aria-hidden="true"></i>
                     </div>
                     <span class="author__name">
                       {{{ name }}}
