--- a/templates/header.mustache
+++ b/templates/header.mustache
@@ -22,7 +22,7 @@
         <input type="text" placeholder="Search learning units" name="search" value="">
         <button type="submit">
           Search
-          <i class="fa fa-search fa-1x" aria-hidden="true"></i>
+          <i class="fa-solid fa-search fa-1x" aria-hidden="true"></i>
         </button>
       </form>
     </div>
