Fix pink activity icons

--- a/sass/_course.scss
+++ b/sass/_course.scss
@@ -22,7 +22,9 @@
   }
 
   .activityiconcontainer.assessment {
-    background-color: #393f4b;
+    img {
+      filter: none !important;
+    }
   }
 
   .btn-primary {
